--- a/1 Physics/2 Gravity/Problem_2/index.html
+++ b/1 Physics/2 Gravity/Problem_2/index.html
@@ -172,6 +172,298 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-2">Problem 2</h1>
+<p>🚀 Escape and Cosmic Velocities: Foundations of Orbital Mechanics
+1. 🌍 Definitions: The Three Cosmic Velocities
+Cosmic Velocity Symbol  Definition  Use Case
+1st 
+𝑣
+1
+v 
+1
+​
+    Minimum horizontal velocity needed for a circular orbit near the surface.   Satellites, ISS, LEO.
+2nd 
+𝑣
+2
+v 
+2
+​
+    Escape velocity: minimum velocity to leave a planet’s gravitational field without propulsion.   Interplanetary missions.
+3rd 
+𝑣
+3
+v 
+3
+​
+    Minimum velocity to escape the gravitational field of the Sun, starting from Earth’s orbit. Interstellar probes.</p>
+<ol>
+<li>🔍 Mathematical Derivations
+First Cosmic Velocity (Orbital Velocity)
+Derived by equating centripetal force with gravity:</li>
+</ol>
+<p>𝐺
+𝑀
+𝑚
+𝑟
+2
+=
+𝑚
+𝑣
+1
+2
+𝑟
+⇒
+𝑣
+1
+=
+𝐺
+𝑀
+𝑟
+r 
+2</p>
+<p>GMm
+​
+ = 
+r
+mv 
+1
+2
+​</p>
+<p>​
+ ⇒v 
+1
+​
+ = 
+r
+GM
+​</p>
+<p>​</p>
+<p>Second Cosmic Velocity (Escape Velocity)
+Derived using energy conservation:</p>
+<p>1
+2
+𝑚
+𝑣
+2
+2
+=
+𝐺
+𝑀
+𝑚
+𝑟
+⇒
+𝑣
+2
+=
+2
+𝐺
+𝑀
+𝑟
+=
+2
+𝑣
+1
+2
+1
+​
+ mv 
+2
+2
+​
+ = 
+r
+GMm
+​
+ ⇒v 
+2
+​
+ = 
+r
+2GM
+​</p>
+<p>​
+ = 
+2
+​
+ v 
+1
+​</p>
+<p>Third Cosmic Velocity (Solar Escape from Earth Orbit)
+Escape velocity from the Sun, starting from a circular Earth orbit:</p>
+<p>𝑣
+3
+=
+𝑣
+𝑒
+𝑠
+𝑐
+,
+Sun
+2
++
+𝑣
+Earth orbit
+2
+≈
+42.1
+ km/s
+v 
+3
+​
+ = 
+v 
+esc,Sun
+2
+​
+ +v 
+Earth orbit
+2
+​</p>
+<p>​
+ ≈42.1 km/s
+3. 🌎 Compute for Earth, Mars, and Jupiter
+Parameters:
+Body    Mass (kg)   Radius (m)
+Earth <br/>
+5.97
+×
+10
+24
+5.97×10 
+24</p>
+<p>6.371
+×
+10
+6
+6.371×10 
+6</p>
+<p>Mars  <br/>
+6.39
+×
+10
+23
+6.39×10 
+23</p>
+<p>3.389
+×
+10
+6
+3.389×10 
+6</p>
+<p>Jupiter 
+1.90
+×
+10
+27
+1.90×10 
+27</p>
+<p>6.9911
+×
+10
+7
+6.9911×10 
+7</p>
+<p>Python Script:
+<img alt="alt text" src="../image-3.png"/>
+4. 🚀 Real-World Applications
+Satellite Orbits:
+LEO: Requires 
+𝑣
+1
+≈
+7.9
+ km/s
+v 
+1
+​
+ ≈7.9 km/s (Earth)</p>
+<p>GPS satellites use 
+𝑣
+1
+v 
+1
+​
+  for Medium Earth Orbits</p>
+<p>Interplanetary Travel:
+Rockets reach 
+𝑣
+2
+v 
+2
+​
+  to escape Earth (about 11.2 km/s)</p>
+<p>To reach Mars, a Hohmann transfer orbit is used</p>
+<p>Interstellar Missions:
+Probes like Voyager 1 achieved 
+𝑣
+3
+≈
+17
+v 
+3
+​
+ ≈17 km/s using gravity assists</p>
+<ol>
+<li>🌠 Graphical Representations
+Bar Chart: Compares 
+𝑣
+1
+v 
+1
+​
+  and 
+𝑣
+2
+v 
+2
+​
+  for different planets</li>
+</ol>
+<p>Function Plot (Optional):</p>
+<p>𝑣
+1
+(
+𝑟
+)
+,
+ 
+𝑣
+2
+(
+𝑟
+)
+ vs. 
+𝑟
+v 
+1
+​
+ (r), v 
+2
+​
+ (r) vs. r
+6. 📌 Summary of Deliverables
+Component   Description
+Derivations Full mathematical explanation of 
+𝑣
+1
+v 
+1
+​
+ , 
+𝑣
+2
+v 
+2
+​
+ , and 
+𝑣
+3
+v 
+3
+​</p>
+<p>Simulations Python script with plots and numeric results
+Applications    Launching satellites, interplanetary escape, space missions
+Visuals Velocity comparison across planets</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
