--- a/1 Physics/4 Electromagnetism/Problem_1/index.html
+++ b/1 Physics/4 Electromagnetism/Problem_1/index.html
@@ -172,6 +172,137 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<p>Problem: Simulating the Effects of the Lorentz Force
+1. Exploration of Applications
+Particle accelerators: Charged particles accelerated by electric fields, steered and focused by magnetic fields.</p>
+<p>Mass spectrometers: Magnetic fields bend particle paths according to mass-to-charge ratio.</p>
+<p>Plasma confinement: Magnetic traps (tokamaks) confine plasma by controlling charged particle trajectories.</p>
+<p>Cathode ray tubes and electron microscopes: Electrons controlled by electromagnetic fields.</p>
+<p>Electric fields 
+𝐸
+E accelerate particles linearly, changing kinetic energy.
+Magnetic fields 
+𝐵
+B cause particles to move in circular or helical paths without doing work (force perpendicular to velocity).</p>
+<ol>
+<li>Physics Background and Equations
+The Lorentz force acting on a particle with charge 
+𝑞
+q is:</li>
+</ol>
+<h1 id="f">𝐹</h1>
+<p>𝑞
+(
+𝐸
++
+𝑣
+×
+𝐵
+)
+F=q(E+v×B)
+Newton’s second law relates force to acceleration:</p>
+<p>𝑚
+𝑑
+𝑣
+𝑑
+𝑡
+=
+𝐹
+m 
+dt
+dv
+​
+ =F
+So,</p>
+<p>𝑑
+𝑣
+𝑑
+𝑡
+=
+𝑞
+𝑚
+(
+𝐸
++
+𝑣
+×
+𝐵
+)
+dt
+dv
+​
+ = 
+m
+q
+​
+ (E+v×B)
+The position updates as:</p>
+<p>𝑑
+𝑟
+𝑑
+𝑡
+=
+𝑣
+dt
+dr
+​
+ =v
+3. Implementation Strategy
+Use Runge-Kutta 4th order method (RK4) for numerical integration (better accuracy than Euler).</p>
+<p>Vectorize velocity and position in 3D.</p>
+<p>Allow flexible input for 
+𝐸
+E, 
+𝐵
+B, initial velocity 
+𝑣
+0
+v 
+0
+​
+ , charge 
+𝑞
+q, and mass 
+𝑚
+m.</p>
+<p>Visualize trajectories in 3D.</p>
+<ol>
+<li>Python Implementation
+<img alt="alt text" src="../image.png"/></li>
+<li>Example Simulations
+Case A: Uniform Magnetic Field (circular motion)
+<img alt="alt text" src="../image-1.png"/>
+Case B: Uniform Electric + Magnetic Fields (helical motion)
+<img alt="alt text" src="../image-2.png"/>
+Case C: Crossed Electric and Magnetic Fields (drift motion)
+<img alt="alt text" src="../image-3.png"/></li>
+<li>Discussion of Results and Practical Relevance
+Cyclotron motion: Circular paths in uniform magnetic fields illustrate how cyclotrons confine and accelerate particles.</li>
+</ol>
+<p>Helical motion: Adding a uniform electric field parallel to the magnetic field causes a particle to spiral, relevant in astrophysics and plasma confinement.</p>
+<p>E×B drift: Crossed fields cause particle drift perpendicular to both fields, essential in plasma devices and charged particle manipulation.</p>
+<p>Larmor radius: Can be computed as 
+𝑟
+𝐿
+=
+𝑚
+𝑣
+⊥
+∣
+𝑞
+∣
+𝐵
+r 
+L
+​
+ = 
+∣q∣B
+mv 
+⊥
+​</p>
+<p>​
+  — the radius of the circular component.</p>
+<p>This simulation framework can be extended to non-uniform fields, time-varying fields, or relativistic particles.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
