--- a/1 Physics/6 Statistics/Problem_1/index.html
+++ b/1 Physics/6 Statistics/Problem_1/index.html
@@ -172,6 +172,55 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<p>Exploring the Central Limit Theorem Through Simulations
+1. Overview
+The Central Limit Theorem (CLT) states that for large enough sample sizes, the distribution of the sample mean approaches a normal distribution, regardless of the population’s original distribution.</p>
+<ol>
+<li>Simulation Plan
+Population Distributions:</li>
+</ol>
+<p>Uniform(0, 1)</p>
+<p>Exponential(λ=1)</p>
+<p>Binomial(n=10, p=0.5)</p>
+<p>Sampling:</p>
+<p>Sample sizes: 5, 10, 30, 50</p>
+<p>For each sample size, take many (e.g., 1000) samples and compute their means.</p>
+<p>Visualization:</p>
+<p>Plot histograms of sample means for each sample size and distribution.</p>
+<p>Overlay normal distribution for comparison.</p>
+<ol>
+<li>Python Code Example
+<img alt="alt text" src="../image.png"/>
+<img alt="alt text" src="../image-1.png"/>
+<img alt="alt text" src="../image-2.png"/></li>
+<li>Discussion Points
+For small sample sizes (e.g., 5), the distribution of sample means resembles the shape of the original population.</li>
+</ol>
+<p>As sample size increases (≥30), the sample mean distribution becomes increasingly Gaussian, confirming the CLT.</p>
+<p>The spread (variance) of the sample means decreases with increasing sample size (
+𝜎
+𝑥
+ˉ
+=
+𝜎
+/
+𝑛
+σ 
+x
+ˉ</p>
+<p>​
+ =σ/ 
+n
+​
+ ).</p>
+<p>The binomial case (discrete distribution) also approaches normality for large sample sizes.</p>
+<p>This explains why normal assumptions are widely used in inferential statistics, even for non-normal data.</p>
+<ol>
+<li>Practical Applications
+Estimating population parameters: Enables confidence intervals around means.</li>
+</ol>
+<p>Quality control: Monitoring sample means ensures process stability.</p>
+<p>Finance: Assumptions on returns often rely on CLT for risk models.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
