--- a/1 Physics/6 Statistics/Problem_2/index.html
+++ b/1 Physics/6 Statistics/Problem_2/index.html
@@ -172,6 +172,143 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-2">Problem 2</h1>
+<p>Estimating π Using Monte Carlo Methods
+Part 1: Estimating π Using a Circle
+Theoretical Foundation
+Consider a unit circle centered at the origin inscribed in a square with side length 2.</p>
+<p>The area of the circle is 
+𝜋
+𝑟
+2
+=
+𝜋
+πr 
+2
+ =π (since 
+𝑟
+=
+1
+r=1).</p>
+<p>The area of the square is 
+2
+×
+2
+=
+4
+2×2=4.</p>
+<p>Randomly generate points 
+(
+𝑥
+,
+𝑦
+)
+(x,y) uniformly in the square 
+[
+−
+1
+,
+1
+]
+×
+[
+−
+1
+,
+1
+]
+[−1,1]×[−1,1].</p>
+<p>The probability that a point falls inside the circle is 
+𝜋
+4
+4
+π
+​
+ .</p>
+<p>So, 
+𝜋
+≈
+4
+×
+Number of points inside the circle
+Total points
+π≈4× 
+Total points
+Number of points inside the circle
+​
+ .</p>
+<p>Python Simulation and Visualization
+<img alt="alt text" src="../image-3.png"/>
+Analysis
+Increasing num_points improves accuracy.</p>
+<p>The method converges roughly at the rate 
+1
+𝑁
+N
+​</p>
+<p>1
+​
+  (slow).</p>
+<p>Computationally cheap but noisy for small samples.</p>
+<p>Part 2: Estimating π Using Buffon’s Needle
+Theoretical Foundation
+Imagine parallel lines spaced distance 
+𝑑
+d apart.</p>
+<p>A needle of length 
+𝑙
+l is randomly dropped.</p>
+<p>Probability 
+𝑃
+P that the needle crosses a line is:</p>
+<h1 id="p">𝑃</h1>
+<p>2
+𝑙
+𝜋
+𝑑
+if 
+𝑙
+≤
+𝑑
+P= 
+πd
+2l
+​
+ if l≤d
+Rearranging to estimate π:</p>
+<p>𝜋
+≈
+2
+𝑙
+𝑁
+𝑑
+𝐶
+π≈ 
+dC
+2lN
+​</p>
+<p>where:</p>
+<p>𝑁
+N = total needle drops,</p>
+<p>𝐶
+C = number of crosses.</p>
+<p>Python Simulation and Visualization
+<img alt="alt text" src="../image-4.png"/>
+Analysis
+The Buffon needle method often converges slower than the circle method.</p>
+<p>More geometrically intuitive but requires care in implementation.</p>
+<p>The crossing count can be zero for small samples — handle division carefully.</p>
+<p>Comparison and Summary
+Method  Convergence Speed   Complexity  Visual Intuition
+Circle Monte Carlo  Moderate (
+1
+/
+𝑁
+1/ 
+N
+​
+ )  Easy to implement   Clear, geometric
+Buffon’s Needle Slower, more variable   More geometric reasoning    More abstract, line crossings</p>
+<p>Both methods illustrate the power of Monte Carlo techniques for approximating constants.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
