--- a/1 Physics/7 Measurements/Problem_1/index.html
+++ b/1 Physics/7 Measurements/Problem_1/index.html
@@ -172,6 +172,554 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<p>Measuring Earth's Gravitational Acceleration with a Pendulum
+Materials
+String length 
+𝐿
+=
+1.00
+ 
+m
+L=1.00m (measured)</p>
+<p>Small weight attached at the string’s end</p>
+<p>Stopwatch with resolution 
+Δ
+𝑡
+=
+0.01
+ 
+s
+Δt=0.01s</p>
+<p>Ruler with resolution 
+Δ
+𝐿
+=
+0.001
+ 
+m
+ΔL=0.001m</p>
+<p>Setup &amp; Measurements
+Measured length 
+𝐿
+=
+1.00
+ 
+m
+L=1.00m (from suspension point to weight center)</p>
+<p>Uncertainty in length:</p>
+<p>Δ
+𝐿
+=
+resolution
+2
+=
+0.001
+2
+=
+0.0005
+ 
+m
+ΔL= 
+2
+resolution
+​
+ = 
+2
+0.001
+​
+ =0.0005m
+Time for 10 oscillations measured 10 times:</p>
+<p>Trial 
+𝑖
+i   Time for 10 oscillations 
+𝑇
+10
+,
+𝑖
+T 
+10,i
+​
+  (s)
+1   20.05
+2   20.08
+3   20.00
+4   20.02
+5   20.10
+6   19.98
+7   20.06
+8   20.07
+9   20.03
+10  20.04</p>
+<p>Data Analysis
+Step 1: Calculate mean and standard deviation of time for 10 oscillations
+Mean time:</p>
+<p>𝑇
+ˉ
+10
+=
+1
+10
+∑
+𝑖
+=
+1
+10
+𝑇
+10
+,
+𝑖
+=
+20.05
++
+⋯
++
+20.04
+10
+=
+20.043
+ 
+s
+T
+ˉ</p>
+<p>10
+​
+ = 
+10
+1
+​</p>
+<p>i=1
+∑
+10
+​
+ T 
+10,i
+​
+ = 
+10
+20.05+⋯+20.04
+​
+ =20.043s
+Standard deviation:</p>
+<h1 id="s">𝑠</h1>
+<p>1
+9
+∑
+𝑖
+=
+1
+10
+(
+𝑇
+10
+,
+𝑖
+−
+𝑇
+ˉ
+10
+)
+2
+≈
+0.038
+ 
+s
+s= 
+9
+1
+​</p>
+<p>i=1
+∑
+10
+​
+ (T 
+10,i
+​
+ − 
+T
+ˉ</p>
+<p>10
+​
+ ) 
+2</p>
+<p>​
+ ≈0.038s
+Uncertainty in mean time (standard error):</p>
+<p>Δ
+𝑇
+ˉ
+10
+=
+𝑠
+10
+=
+0.038
+10
+=
+0.012
+ 
+s
+Δ 
+T
+ˉ</p>
+<p>10
+​
+ = 
+10
+​</p>
+<p>s
+​
+ = 
+10
+​</p>
+<p>0.038
+​
+ =0.012s
+Step 2: Calculate period 
+𝑇
+T and uncertainty 
+Δ
+𝑇
+ΔT
+𝑇
+=
+𝑇
+ˉ
+10
+10
+=
+2.0043
+ 
+s
+T= 
+10
+T
+ˉ</p>
+<p>10
+​</p>
+<p>​
+ =2.0043s
+Δ
+𝑇
+=
+Δ
+𝑇
+ˉ
+10
+10
+=
+0.0012
+ 
+s
+ΔT= 
+10
+Δ 
+T
+ˉ</p>
+<p>10
+​</p>
+<p>​
+ =0.0012s
+Step 3: Calculate gravitational acceleration 
+𝑔
+g
+Using the pendulum period formula for small angles:</p>
+<h1 id="t">𝑇</h1>
+<p>2
+𝜋
+𝐿
+𝑔
+  
+⟹
+  
+𝑔
+=
+4
+𝜋
+2
+𝐿
+𝑇
+2
+T=2π 
+g
+L
+​</p>
+<p>​
+ ⟹g= 
+T 
+2</p>
+<p>4π 
+2
+ L
+​</p>
+<p>Calculate 
+𝑔
+g:</p>
+<h1 id="g">𝑔</h1>
+<p>4
+𝜋
+2
+×
+1.00
+(
+2.0043
+)
+2
+=
+39.478
+4.017
+≈
+9.828
+ 
+m/s
+2
+g= 
+(2.0043) 
+2</p>
+<p>4π 
+2
+ ×1.00
+​
+ = 
+4.017
+39.478
+​
+ ≈9.828m/s 
+2</p>
+<p>Step 4: Propagate uncertainties to find 
+Δ
+𝑔
+Δg
+Using uncertainty propagation formula:</p>
+<p>(
+Δ
+𝑔
+𝑔
+)
+2
+=
+(
+Δ
+𝐿
+𝐿
+)
+2
++
+(
+2
+Δ
+𝑇
+𝑇
+)
+2
+( 
+g
+Δg
+​
+ ) 
+2
+ =( 
+L
+ΔL
+​
+ ) 
+2
+ +(2 
+T
+ΔT
+​
+ ) 
+2</p>
+<p>Calculate relative uncertainties:</p>
+<p>Δ
+𝐿
+𝐿
+=
+0.0005
+1.00
+=
+0.0005
+L
+ΔL
+​
+ = 
+1.00
+0.0005
+​
+ =0.0005
+Δ
+𝑇
+𝑇
+=
+0.0012
+2.0043
+≈
+0.0006
+T
+ΔT
+​
+ = 
+2.0043
+0.0012
+​
+ ≈0.0006
+Calculate total relative uncertainty:</p>
+<p>(
+Δ
+𝑔
+𝑔
+)
+2
+=
+(
+0.0005
+)
+2
++
+(
+2
+×
+0.0006
+)
+2
+=
+2.5
+×
+10
+−
+7
++
+(
+0.0012
+)
+2
+=
+2.5
+×
+10
+−
+7
++
+1.44
+×
+10
+−
+6
+=
+1.69
+×
+10
+−
+6
+( 
+g
+Δg
+​
+ ) 
+2
+ =(0.0005) 
+2
+ +(2×0.0006) 
+2
+ =2.5×10 
+−7
+ +(0.0012) 
+2
+ =2.5×10 
+−7
+ +1.44×10 
+−6
+ =1.69×10 
+−6</p>
+<p>Δ
+𝑔
+𝑔
+=
+1.69
+×
+10
+−
+6
+=
+0.0013
+g
+Δg
+​
+ = 
+1.69×10 
+−6</p>
+<p>​
+ =0.0013
+Calculate 
+Δ
+𝑔
+Δg:</p>
+<p>Δ
+𝑔
+=
+0.0013
+×
+9.828
+=
+0.013
+ 
+m/s
+2
+Δg=0.0013×9.828=0.013m/s 
+2</p>
+<p>Results Summary
+Quantity    Value   Uncertainty
+Length, 
+𝐿
+L   1.00 m  ±0.0005 m
+Mean time for 10 oscillations, 
+𝑇
+ˉ
+10
+T
+ˉ</p>
+<p>10
+​
+    20.043 s    ±0.012 s
+Period, 
+𝑇
+T   2.0043 s    ±0.0012 s
+Gravitational acceleration, 
+𝑔
+g   9.828 m/s²  ±0.013 m/s²</p>
+<p>Discussion on Uncertainties and Sources of Error
+Measurement resolution: The length uncertainty is very small due to fine ruler resolution; thus its contribution to uncertainty is minimal.</p>
+<p>Timing variability: Human reaction time and stopwatch resolution dominate timing uncertainty. Taking average over 10 oscillations reduces error.</p>
+<p>Assumptions:</p>
+<p>Small angle approximation (&lt;15°) to ensure 
+𝑇
+=
+2
+𝜋
+𝐿
+/
+𝑔
+T=2π 
+L/g
+​
+  holds.</p>
+<p>Neglecting air resistance and frictional losses.</p>
+<p>Assuming the string is massless and rigid.</p>
+<p>Limitations:</p>
+<p>Timing by hand introduces random errors.</p>
+<p>Environmental factors (air currents, vibrations) may affect results.</p>
+<p>Length measured from suspension to center of mass of weight; error if not centered precisely.</p>
+<p>Comparison with Standard Value
+Standard 
+𝑔
+g at sea level = 9.80665 m/s².</p>
+<p>Measured value: 
+9.828
+±
+0.013
+9.828±0.013 m/s² is close, within uncertainty range.</p>
+<p>Slight difference may arise from local variations in 
+𝑔
+g or systematic errors.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
