--- a/1 Physics/3 Waves/Problem_1/index.html
+++ b/1 Physics/3 Waves/Problem_1/index.html
@@ -171,133 +171,68 @@
 </div>
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
-<p><strong>Problem 1: Equivalent Resistance Using Graph Theory</strong></p>
+<p><strong>Problem 1: Interference Patterns on a Water Surface</strong></p>
 <hr/>
-<h3 id="mathematical-and-algorithmic-foundation">🔹 Mathematical and Algorithmic Foundation</h3>
-<p>Electrical circuits can be modeled as <strong>weighted undirected graphs</strong>, where:</p>
+<h3 id="mathematical-model">🔹 Mathematical Model</h3>
+<p>The wave from a single point source is given by:</p>
+<div class="arithmatex">\[
+\eta(x, y, t) = A \sin(kr - \omega t + \phi)
+\]</div>
+<p>Where:</p>
 <ul>
-<li><strong>Nodes</strong> = circuit junctions</li>
-<li><strong>Edges</strong> = resistors (edge weights = resistance values)</li>
+<li><span class="arithmatex">\(A\)</span>: Amplitude</li>
+<li><span class="arithmatex">\(r = \sqrt{(x - x_0)^2 + (y - y_0)^2}\)</span>: Distance from the source</li>
+<li><span class="arithmatex">\(k = \frac{2\pi}{\lambda}\)</span>: Wave number</li>
+<li><span class="arithmatex">\(\omega = 2\pi f\)</span>: Angular frequency</li>
+<li><span class="arithmatex">\(\phi\)</span>: Initial phase</li>
 </ul>
-<p><strong>Goal</strong>: Find the <strong>equivalent resistance</strong> between two specified nodes (e.g., input and output terminals) by systematically reducing the graph.</p>
+<p>The total displacement from <span class="arithmatex">\(N\)</span> sources becomes:</p>
+<div class="arithmatex">\[
+\eta_{\text{total}}(x, y, t) = \sum_{i=1}^{N} A \sin(k r_i - \omega t + \phi)
+\]</div>
 <hr/>
-<h2 id="option-2-advanced-task-full-implementation">✅ <strong>Option 2: Advanced Task – Full Implementation</strong></h2>
-<hr/>
-<h3 id="step-by-step-strategy">🧠 Step-by-Step Strategy</h3>
-<h4 id="1-graph-representation">1. <strong>Graph Representation</strong></h4>
-<ul>
-<li>Model the circuit as an undirected weighted graph using <code>networkx</code>.</li>
-<li>Each resistor is an edge with weight equal to its resistance.</li>
-</ul>
-<h4 id="2-reduction-rules">2. <strong>Reduction Rules</strong></h4>
-<ul>
-<li><strong>Series:</strong> If two nodes are connected by a single path (degree 2), collapse the series:</li>
-</ul>
-<p>$$
-  R_{\text{eq}} = R_1 + R_2
-  $$
-* <strong>Parallel:</strong> For nodes connected by multiple paths (same start and end), reduce using:</p>
-<p>$$
-  \frac{1}{R_{\text{eq}}} = \sum \frac{1}{R_i}
-  $$</p>
-<h4 id="3-traversal-and-simplification">3. <strong>Traversal and Simplification</strong></h4>
-<ul>
-<li>Use DFS or BFS to identify reduction opportunities.</li>
-<li>Repeatedly apply simplifications until only one equivalent edge remains between the start and end nodes.</li>
-</ul>
-<hr/>
-<h3 id="example-circuit-diagrams-and-expected-behavior">🧪 Example Circuit Diagrams and Expected Behavior</h3>
-<table>
-<thead>
-<tr>
-<th>Example</th>
-<th>Type</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>Series</td>
-<td>Resistors 2Ω and 3Ω between A and B → Result: 5Ω</td>
-</tr>
-<tr>
-<td>2</td>
-<td>Parallel</td>
-<td>2Ω and 3Ω in parallel between A and B → Result: <span class="arithmatex">\(\frac{1}{\frac{1}{2} + \frac{1}{3}} = 1.2Ω\)</span></td>
-</tr>
-<tr>
-<td>3</td>
-<td>Mixed</td>
-<td>2Ω &amp; 2Ω in parallel, in series with 4Ω → Result: 5Ω</td>
-</tr>
-</tbody>
-</table>
-<hr/>
-<h3 id="python-implementation">🐍 Python Implementation</h3>
-<pre><code class="language-python">import networkx as nx
+<h3 id="python-code">🔹 Python Code</h3>
+<pre><code class="language-python">import numpy as np
+import matplotlib.pyplot as plt
 
-def combine_parallel_edges(G):
-    for u, v in list(G.edges()):
-        edges = list(G.get_edge_data(u, v).values())
-        if len(edges) &gt; 1:
-            total_inv = sum(1 / edge['resistance'] for edge in edges)
-            R_eq = 1 / total_inv
-            G.remove_edges_from([(u, v)] * len(edges))
-            G.add_edge(u, v, resistance=R_eq)
+# Simulation Parameters
+A = 1.0
+wavelength = 1.0
+frequency = 1.0
+k = 2 * np.pi / wavelength
+omega = 2 * np.pi * frequency
+phi = 0
+t = 0
 
-def simplify_series_nodes(G):
-    changed = True
-    while changed:
-        changed = False
-        for node in list(G.nodes()):
-            if G.degree[node] == 2 and node not in ('A', 'B'):  # Skip terminals
-                neighbors = list(G.neighbors(node))
-                r1 = G[node][neighbors[0]]['resistance']
-                r2 = G[node][neighbors[1]]['resistance']
-                R_eq = r1 + r2
-                G.add_edge(neighbors[0], neighbors[1], resistance=R_eq)
-                G.remove_node(node)
-                changed = True
-                break
+# Grid setup
+x = np.linspace(-5, 5, 500)
+y = np.linspace(-5, 5, 500)
+X, Y = np.meshgrid(x, y)
 
-def calculate_equivalent_resistance(G, source, target):
-    combine_parallel_edges(G)
-    simplify_series_nodes(G)
-    return G[source][target]['resistance'] if G.has_edge(source, target) else None
+# Regular Polygon: Square (4 vertices)
+n_sources = 4
+radius = 2.0
+angles = np.linspace(0, 2*np.pi, n_sources, endpoint=False)
+source_positions = [(radius * np.cos(a), radius * np.sin(a)) for a in angles]
 
-# Example: Mixed circuit (Parallel + Series)
-G = nx.MultiGraph()
-G.add_edge('A', 'C', resistance=2)
-G.add_edge('A', 'C', resistance=2)
-G.add_edge('C', 'B', resistance=4)
+# Interference pattern
+Z = np.zeros_like(X)
+for x0, y0 in source_positions:
+    r = np.sqrt((X - x0)**2 + (Y - y0)**2)
+    Z += A * np.sin(k * r - omega * t + phi)
 
-R_eq = calculate_equivalent_resistance(G, 'A', 'B')
-print(f"Equivalent Resistance: {R_eq} Ω")
+# Plotting
+plt.figure(figsize=(8, 6))
+plt.contourf(X, Y, Z, levels=100, cmap='RdBu')
+plt.colorbar(label='Displacement')
+plt.title('Interference Pattern from 4 Point Sources (Square Configuration)')
+plt.xlabel('x')
+plt.ylabel('y')
+plt.axis('equal')
+plt.tight_layout()
+plt.show()
 </code></pre>
-<p><img alt="alt text" src="../image-2.png"/>
----<img alt="alt text" src="../image-3.png"/></p>
-<h3 id="analysis-of-algorithm-efficiency">📈 Analysis of Algorithm Efficiency</h3>
-<ul>
-<li>
-<p>For sparse graphs (typical in circuits), performance is efficient:</p>
-</li>
-<li>
-<p><strong>Series detection</strong>: <span class="arithmatex">\(O(N)\)</span></p>
-</li>
-<li><strong>Parallel merging</strong>: <span class="arithmatex">\(O(E)\)</span></li>
-<li>
-<p>Can be improved using:</p>
-</li>
-<li>
-<p>Union-find data structures</p>
-</li>
-<li>Kirchhoff’s Laws and matrix reduction (for advanced cases)</li>
-</ul>
-<hr/>
-<h3 id="conclusion">🧩 Conclusion</h3>
-<p>This approach effectively models and reduces circuits using graph-based methods, automating what would otherwise be a manual and error-prone process for large circuits.</p>
-<hr/>
+<h2 id="_1"><img alt="alt text" src="../image-4.png"/></h2>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
