deploy: afafa1a536c12ad695700a88c366a2dfa8075912

--- a/1 Physics/4 Electromagnetism/Problem_1/index.html
+++ b/1 Physics/4 Electromagnetism/Problem_1/index.html
@@ -331,9 +331,10 @@ particle.plot_trajectory_2d(pos[:,:2], "Particle Trajectory in Crossed E and B F
 <li><strong>Relativistic effects</strong>: Modify equations for particles approaching light speed</li>
 <li><strong>Multiple particles</strong>: Simulate particle beams or plasmas</li>
 <li><strong>Time-varying fields</strong>: Study RF cavities or pulsed field devices</li>
-<li><strong>Collisions</strong>: Add interaction terms for more realistic plasma simulations</li>
+<li><strong>Collisions</strong>: Add interaction terms for more realistic plasma simulations
+z
+This simulation framework provides a foundation for exploring more complex electromagnetic systems relevant to both fundamental physics and engineering applications.</li>
 </ol>
-<p>This simulation framework provides a foundation for exploring more complex electromagnetic systems relevant to both fundamental physics and engineering applications.</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
